--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -39,6 +39,8 @@
 	color: white;
 	background-color: rgba(66, 66, 66, 1.0);
 	border-radius :7px;
+	font-size: 10.5pt;
+	font-weight: 600;
 }
 
 .option_button:hover {
@@ -82,7 +84,7 @@
 }</string>
           </property>
           <property name="text">
-           <string>Color Theme</string>
+           <string>Graph Theme</string>
           </property>
          </widget>
         </item>
@@ -96,8 +98,7 @@
           </property>
           <property name="styleSheet">
            <string notr="true">QComboBox {
-	border: 0px;
-	border-radius: 7px;
+	border-radius: 3px;
 	padding: 3px;
 	background-color: white;
 	font: 17px;
@@ -161,18 +162,19 @@
            <bool>false</bool>
           </property>
           <property name="styleSheet">
-           <string notr="true">QListWidget#listSplits {
+           <string notr="true">QListWidget {
 	color: white;
 	background-color: rgb(66, 66, 66);
-	border-radius: 7px
+	border-radius: 7px;
+	outline: none;
 }
 
-QListWidget#listSplits:item:hover {
+QListWidget:item:hover {
 	color: white;
 	background-color: rgb(50, 50, 50);
 }
 
-QListWidget#listSplits:item:selected {
+QListWidget:item:selected {
 	color: rgb(66,66,66);
 	background-color: rgb(89, 197, 255);
 }
@@ -245,8 +247,9 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
               <kerning>true</kerning>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="focusPolicy">
@@ -294,7 +297,8 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="text">
@@ -371,7 +375,8 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="text">
@@ -416,7 +421,8 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="text">
@@ -461,7 +467,8 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="text">
@@ -512,7 +519,8 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="text">
@@ -557,7 +565,8 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="text">
@@ -602,7 +611,8 @@ QListWidget#listSplits:item:selected {
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>11</pointsize>
+              <fontweight>DemiBold</fontweight>
              </font>
             </property>
             <property name="text">
@@ -681,7 +691,6 @@ QListWidget#listSplits:item:selected {
    </widget>
    <addaction name="menuFile"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
